--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,9 +5,9 @@
 <div class = "row">
   <% @courses.each do |course| %>
     <div class = "col-lg-3 col-md-4 col-sm-6 col-xs-12">
-      <%= link_to course.name, course.url %>
+      <strong><%= link_to course.name, course.url %></strong>
       <p>
-        <%= link_to "Show this course", course %>
+       <em><%= link_to "Show this course", course %></em>
         
       </p>
     </div>
