--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,23 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <title>Funzana</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+  
+    <title>Funzana</title>
   </head>
-
   <body>
-    <div class = "container">
+     <div class = "container">
+     <%= render 'layouts/mainmenu' %>
       <%= yield %>
     </div>
+
+   
   </body>
 </html>
