--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -13,5 +13,9 @@
     <strong>Category:</strong>
     <%= course.category_id %>
   </p>
+   <p>
+    <strong>Body</strong>
+    <%= course.body %>
+  </p>
 
 </div>
