--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -11,7 +11,7 @@
 
   <p>
     <strong>Category:</strong>
-    <%= course.category_id %>
+    <%= course.category.name %>
   </p>
    <p>
     <strong>Body</strong>
