--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div>
     <%= form.label :category_id, style: "display: block" %>
-    <%= form.text_field :category_id %>
+    <%= form.select :category_id, Category.all.collect {|c| [c.name, c.id]}, include_blank: true, class: "form-control" %>
   </div>
   <div>
     <%= form.label :body %>
