--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,8 @@
      <div class = "container">
      <%= render 'layouts/mainmenu' %>
       <%= yield %>
+
+      <%= render 'layouts/footer' %>
     </div>
 
    
