--- a/app/views/layouts/_mainmenu.html.erb
+++ b/app/views/layouts/_mainmenu.html.erb
@@ -23,5 +23,24 @@
         </li>
       </ul>
     </div>
+    
   </div>
+  
 </nav>
+
+<!-- Menu for logged in user -->
+<div class="row">
+  <div class="col-xs-float-right">
+    <p class="navbar-text">
+    <% if user_signed_in? %>
+      Logged in as <strong><%= current_user.email %></strong>.
+      <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+    <% else %>
+      <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+      <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+    <% end %>
+    </p>
+  </div>
+</div>
+<!-- End of Logged in user menu -->
