--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,16 @@
   </head>
   <body>
      <div class = "container">
+    <% if notice %>
+      <p class="alert alert-success"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
+
      <%= render 'layouts/mainmenu' %>
+
+
       <%= yield %>
 
       <%= render 'layouts/footer' %>
