--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -6,7 +6,7 @@
 
   <p>
     <strong>Url:</strong>
-    <%= course.url %>
+    <%= link_to course.url, course.url, target: "_blank" %>
   </p>
 
   <p>
