--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,10 +1,15 @@
 <h1>Editing course</h1>
+<div class="row">
+  <div class="col-md-6">
+    <%= render "form", course: @course %>
 
-<%= render "form", course: @course %>
+    <br>
 
-<br>
-
-<div>
-  <%= link_to "Show this course", @course %> |
-  <%= link_to "Back to courses", courses_path %>
+    <div>
+      <%= link_to "Show this course", @course, class: "btn btn-primary" %> |
+      <%= link_to "Back to courses", courses_path, class: "btn btn-primary" %>
+    </div>
+  </div>
+  <div class="col-md-6">
+  </div>
 </div>
