--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,10 +1,17 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @course %>
+<div class="row">
+  <div class="col-md-8">
+    <%= render @course %>
 
-<div>
-  <%= link_to "Edit this course", edit_course_path(@course) %> |
-  <%= link_to "Back to courses", courses_path %>
+    <div>
+      <%= link_to "Edit this course", edit_course_path(@course), class: "btn btn-primary" %> |
+      <%= link_to "Back to courses", courses_path, class: "btn btn-primary" %>
 
-  <%= button_to "Destroy this course", @course, method: :delete %>
+      <%= button_to "Destroy this course", @course, method: :delete, class: "btn btn-danger mt-2" %>
+    </div>
+  </div>
+  <div class="col-md-4">
+
+  </div>
 </div>
