--- a/app/views/layouts/_mainmenu.html.erb
+++ b/app/views/layouts/_mainmenu.html.erb
@@ -30,8 +30,9 @@
 
 <!-- Menu for logged in user -->
 <div class="row">
-  <div class="col-xs-float-right">
-    <p class="navbar-text">
+  <div class="col-md-9 col-sm-12"></div>
+  <div class="col-md-3 col-sm-12">
+    <p class="navbar-text ms-auto">
     <% if user_signed_in? %>
       Logged in as <strong><%= current_user.email %></strong>.
       <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
