Refactor categories index

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,7 +3,7 @@ h1{
 }
 
 .course-bg{
-    background-color: rgba(232,227,226, 0.7);
+    background-color: linear-gradient(rgba(232,227,226, 0.7), rgba(0,99,120,0.7));
 }
 
 #images{
