Fix current year on footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -38,7 +38,7 @@
 
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2020 Copyright:
+    © <%= Date.today.year %> Copyright:
     <a class="text-dark" href="https://funzana.co.tz/">Funzana</a>
   </div>
   <!-- Copyright -->
