--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -14,4 +14,4 @@
   <% end %>
 </div>
 
-<%= link_to "New course", new_course_path, class: "btn btn-primary" %>
+<%= link_to "New course", new_course_path, class: "btn btn-primary" if current_user%>
