--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -8,4 +8,4 @@
   <% end %>
 </div>
 
-<%= link_to "New category", new_category_path, class: "btn btn-primary" %>
+<%= link_to "New category", new_category_path, class: "btn btn-primary" if user_admin %>
