--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,8 +1,11 @@
 <%= form_with(model: category) do |form| %>
   <% if category.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(category.errors.count, "error") %> prohibited this category from being saved:</h2>
+      <h4><%= pluralize(category.errors.count, "error") %> prohibited this category from being saved:</h4>
       </ul>
+      <% category.errors.each do |msg| %>
+        <li><%= msg.message %></li>
+      <% end %>
     </div>
   <% end %>
 <div class="row">
