--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -8,7 +8,7 @@
       <%= link_to "Edit this course", edit_course_path(@course), class: "btn btn-primary" %> |
       <%= link_to "Back to courses", courses_path, class: "btn btn-primary" %>
 
-      <%= button_to "Destroy this course", course_path(@course), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger mt-2" %>
+      <%= button_to "Destroy this course", @course, data:{ turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn btn-danger mt-2" %>
     </div>
   </div>
   <div class="col-md-4">
