--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -7,6 +7,8 @@
     <div class = "col-lg-3 col-md-4 col-sm-6 col-xs-12">
     <span class="category-text"> <%= course.category.name %></span><br>
       <strong><%= link_to course.name, course.url %></strong>
+      <br />
+      <%= course.body %>
       <p>
        <em><%= link_to "Show this course", course %></em>
         
