Remove truncate_words

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -8,7 +8,9 @@
     <span class="category-text"> <%= course.category.name %></span><br>
       <strong><%= link_to course.name, course.url %></strong>
       <br />
-      <%= course.body.truncate_words(4) %>
+      <%= 
+      #course.body.truncate_words(4) 
+      %>
       <p>
        <em><%= link_to "Show this course", course %></em>
         
