--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,9 +7,9 @@
 
             </div>
             <div class="col-lg-6">
-                <h1 class="mt-3 animated bounce slow">Funzana, Best online learning sources</h1>
-                <p class="lead text-secondary my-5">Is there any online source of learning that we have missed?
-                Let us know and we will include it in the list.</p>
+                <h1 class="mt-3 animated bounce slow">Funzana, Best collection of free online learning sources</h1>
+                <p class="lead text-secondary my-5">Create account to add or suggest the online learning sources
+                </p>
                 <a href="#" class="btn btn-outline-secondary btn-lg border">Learn More</a>
             </div>
         </div>
