--- a/app/views/layouts/_mainmenu.html.erb
+++ b/app/views/layouts/_mainmenu.html.erb
@@ -12,7 +12,7 @@
         </li>
         <li class="nav-item">
          
-          <%= link_to "Courses", courses_path, class: "nav-link" %>
+          <%= link_to "My Courses", courses_path, class: "nav-link"  if user_signed_in?%>
         </li>
         <li class="nav-item">
          
