--- a/app/views/layouts/_mainmenu.html.erb
+++ b/app/views/layouts/_mainmenu.html.erb
@@ -16,7 +16,7 @@
         </li>
         <li class="nav-item">
          
-          <%= link_to "Categories", categories_path, class: "nav-link" %>
+          <%= link_to "Categories", categories_path, class: "nav-link" if user_signed_in? %>
         </li>
        
       </ul>
@@ -34,7 +34,7 @@
     <% if user_signed_in? %>
       Logged in as <strong><%= current_user.email %></strong>.
       <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-      <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "navbar-link"  %>
+      <%= link_to "Logout", destroy_user_session_path, :method => :delete, class: "navbar-link"  %>
     <% else %>
       <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link' %> |
       <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
